name:                cse230-while
version:             0.1.0.0
synopsis:            Starter code 
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Library
  ghc-options:        -W
  exposed-modules:    CSE230.Fold,
                      CSE230.While.Types,
                      CSE230.While.Eval,
                      CSE230.While.Parse 

  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base,
                       parsec, 
                       containers, 
                       mtl

  hs-source-dirs:      src
  default-language:    Haskell2010

executable while
  build-depends:       base, 
                       parsec, 
                       containers, 
                       mtl,
                       cse230-while

  default-language:    Haskell2010
  main-is:             src/While.hs
  Default-Extensions:  OverloadedStrings

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base, parsec, containers, mtl,
                    filepath,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    cse230-while
  other-modules:    Common 
